syntax = "proto3";

package todo;

service Todo{
    rpc AddTodoItem(TodoItem) returns (TodoItem);
    rpc GetTodoItems(User) returns (TodoItems);
    rpc GetTodoItemsStream(User) returns (stream TodoItem);
    rpc AddTodoStreamItems(stream TodoItem) returns(TodoItems);
    rpc AddTodoStreamItemsResponseStream(stream TodoItem) returns(stream TodoItem);
}

message User{
    string id = 1;
    string email = 2;
    string password = 3;
}

message TodoItem{
    string id = 1;
    string text = 2;
    string userId = 4;
    bool isCompleted = 5;
}

message TodoItems{
    repeated TodoItem items = 1;
}